# DrahflowsAR

./: .gitignore  AndroidManifest.xml  Makefile  README.md  build.xml  local.properties
Hand-examples/: Makefile  ciratefi.cpp  devel.cpp
jni/: Android.mk  Application.mk  CameraTracker.cpp  CameraTracker.h  ar_gesture.cpp  ar_jni.cpp  ar_jni.h  ar_svo.cpp
res/values/: strings.xml
src/name/drahflow/ar/: ArActivity.java  CameraTracker.java  DrahflowsAR.java  DrahflowsAR.old  GestureCalibrationActivity.java  GestureTracker.java  GlobalState.java  GreenCubesActivity.java  JNI.java  MainActivity.java  MainMenuActivity.java  Menu.java  ScaleCalibrationActivity.java  ScaleEstimator.java  SensorTracker.java  TODO  Utils.java  VideoFrame.java  VideoHistory.java
src/name/drahflow/ar/apps/VNC/: AbstractBitmapData.java  AbstractBitmapDrawable.java  AbstractScaling.java  BitmapImplHint.java  COLORMODEL.java  CapabilityInfo.java  CapsContainer.java  ColorModel256.java  ColorModel64.java  ColorModel8.java  ConnectionBean.java  ConnectionBeanStorage.java  DH.java  DesCipher.java  FitToScreenScaling.java  FullBufferBitmapData.java  InStream.java  LargeBitmapData.java  MemInStream.java  ObjectPool.java  OneToOneScaling.java  OverlappingCopy.java  README  RectList.java  RfbProto.java  SafeObjectPool.java  Utils.java  VncCanvas.java  Window.java  ZlibInStream.java  ZoomScaling.java
src/name/drahflow/ar/geometry/: Collection.java  Color.java  Constants.java  Cube.java  Geometry.java  OverlayText.java  PointerEvent.java  Scaling.java  Solid.java  SpaceMenu.java  SpaceSelector.java  Texture.java  Translation.java  View.java
svo/: CMakeLists.txt
svo/include/boost/predef/: architecture.h  compiler.h  os.h  platform.h
svo/include/kalman/: ukf.hpp
svo/include/opencv2/: opencv.hpp  video.hpp  xfeatures2d.hpp
svo/include/opencv2/core/: base.hpp
svo/include/opencv2/flann/: defines.h
svo/include/svo/: config.h
svo/include/utils/: lockable
svo/include/vikit/: homography.h
svo/src/: fast_10_score.cpp
svo/src/opencv/calib3d/: precomp.hpp
svo/src/opencv/core/: arithm.cpp  convert.cpp  copy.cpp  cvconfig.h  dxt.cpp  hal_replacement.hpp  mathfuncs.cpp  mathfuncs_core.simd.hpp  mathfuncs_core.simd_declarations.hpp  matmul.cpp  matrix.cpp  persistence.cpp  precomp.hpp  private.hpp  stat.cpp  system.cpp  umatrix.cpp  version_string.inc
svo/src/opencv/features2d/: matchers.cpp  precomp.hpp
svo/src/opencv/imgcodecs/: grfmts.hpp  loadsave.cpp  precomp.hpp
svo/src/opencv/imgproc/: color.cpp  filter.cpp  hal_replacement.hpp  histogram.cpp  imgwarp.cpp  precomp.hpp  pyramids.cpp  smooth.cpp  sumpixels.cpp  templmatch.cpp  thresh.cpp
svo/src/opencv/video/: lkpyramid.cpp  precomp.hpp
svo/src/opencv/xfeatures2d/: precomp.hpp
svo/src/svo/: config.cpp  depth_filter.cpp  feature_detection.cpp  frame.cpp  frame_handler_base.cpp  frame_handler_mono.cpp  initialization.cpp  sparse_img_align.cpp
svo/test/: test_pipeline.cpp
